Fixed spacing errors in sign up

--- a/app/assets/stylesheets/layout/session_form.scss
+++ b/app/assets/stylesheets/layout/session_form.scss
@@ -132,4 +132,5 @@ input[type=submit] {
 
 .errors-box {
   position: absolute;
+  margin-top: -15px;
 }
